# drf-project.ZZZ.30.1.2

./: .env  .env.example  .gitignore  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
materials/: apps.py  models.py  serializer.py  settings..py  tasks.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course_alter_lesson_image.py
users/: admin.py  apps.py  models.py  serializer.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
